Fixing z-index hack in header

--- a/app/Resources/public/less/includes/header.less
+++ b/app/Resources/public/less/includes/header.less
@@ -4,7 +4,7 @@ header.main-header{
     position: fixed;
     height: 46px;
     width: 100%;
-    z-index: 999;
+    z-index: 1;
     ul{
         list-style: none;
     }
